gulp/application/sources/scss/typography.scss
// Colors

.c-white { color: $white }
.c-light { color: $gray-100 }
.c-dark { color: $gray-900 }
.c-black { color: $black }


// Font

.ff-sans          { font-family: $font-family-sans }
.ff-sans-narrow   { font-family: $font-family-sans-narrow }
.ff-sans-caption  { font-family: $font-family-sans-caption }
.ff-serif         { font-family: $font-family-serif }
.ff-mono          { font-family: $font-family-mono }

@each $viewport, $width in $viewport-widths {
  $infix: get-breakpoint-infix($viewport);

  @include media-breakpoint-up($width) {
    .fs-08#{$infix}   { font-size: $font-size-current * 0.8 }
    .fs-09#{$infix}   { font-size: $font-size-current * 0.9 }
    .fs-1#{$infix}    { font-size: $font-size-current }
    .fs-11#{$infix}   { font-size: $font-size-current * 1.1 }
    .fs-12#{$infix}   { font-size: $font-size-current * 1.2 }
    .fs-13#{$infix}   { font-size: $font-size-current * 1.3 }
    .fs-14#{$infix}   { font-size: $font-size-current * 1.4 }
    .fs-15#{$infix}   { font-size: $font-size-current * 1.5 }
    .fs-175#{$infix}  { font-size: $font-size-current * 1.75 }
    .fs-2#{$infix}    { font-size: $font-size-current * 2 }
    .fs-3#{$infix}    { font-size: $font-size-current * 3 }
    .fs-4#{$infix}    { font-size: $font-size-current * 4 }
    .fs-5#{$infix}    { font-size: $font-size-current * 5 }

    .lh-1#{$infix} { line-height: 1 }
    .lh-11#{$infix} { line-height: 1.1 }
    .lh-12#{$infix} { line-height: 1.2 }
    .lh-13#{$infix} { line-height: 1.3 }
    .lh-14#{$infix} { line-height: 1.4 }
  }
}

.fw-lighter   { font-weight: $font-weight-lighter }
.fw-light     { font-weight: $font-weight-light }
.fw-normal    { font-weight: $font-weight-normal }
.fw-bold      { font-weight: $font-weight-bold }
.fw-bolder    { font-weight: $font-weight-bolder }

.fs-italic { font-style: italic }

.small { font-size: 80% }

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  @include media-breakpoint-up($width-sm) {
    font-size: $font-size-sm;
    line-height: $line-height-sm;
  }
  @include media-breakpoint-up($width-md) {
    font-size: $font-size-md;
    line-height: $line-height-md;
  }
  @include media-breakpoint-up($width-lg) {
    font-size: $font-size-lg;
    line-height: $line-height-lg;
  }
}


// Heading

h3 { font-size: $font-size-current }
h2 { font-size: $font-size-current * 1.5 }
h1 { font-size: $font-size-current * 2.5 }

h1, h2, h3 {
  hyphens: none;
  font-family: $font-family-sans-caption;
  margin-bottom: $font-size-current / 1.5;
  p + &,
  ul + &,
  ol + &,
  figure + & { margin-top: $font-size-current * 2 }
}

h1:first-child,
h2:first-child,
h3:first-child { margin-top: $font-size-current * 1.25 }

h3 { margin-bottom: $font-size-current / 3 }


// Link

.link         { border-bottom: 1px solid rgba(0,  100, 168, 0.2) }
.link:hover   { border-bottom: 1px solid rgba(160, 48,   0, 0.2) }


// Image, figure, and figcaption

img {
  max-width: 100%;
  height: auto;

  &:not([src]) { visibility: hidden }

  &.loading { border: none }
}

.picture-wrapper {
  width: 100%;
  height: 0;
  position: relative;
  background: $gray-300;

  img {
    width: 100%;
    position: absolute;
  }
}

figure {
  margin-top: $font-size-current * 0.5;
  margin-bottom: $font-size-current * 2;
}

figcaption {
  @include hyphens-none;
  @include hanging-none;
  font-family: $font-family-sans;
  font-size: $font-size-current * 0.9;
  margin-top: $font-size-current *  0.25;
  margin-bottom: $font-size-current * 2;
}


// List

ul { list-style-type: none }

ul, ol {
  padding-left: $font-size-current * 2;
  margin-bottom: $font-size-current * 1.25;
}

p + ul,
p + ol { margin-top: -$paragraph-margin-bottom }

ul > li:not(:last-of-type),
ol > li:not(:last-of-type) { margin-bottom: $paragraph-margin-bottom * 0.6 }

dl, dt, dd { font-family: $font-family-sans }

dl { margin-bottom: $font-size-current }

dd p { margin-bottom: $font-size-current * 0.25 }


// Paragraph, indent, superquote, reference

p { margin-bottom: $paragraph-margin-bottom }

p.indent,
p.superquote,
p.reference { font-family: $font-family-sans }

p.superquote,
p.reference {
  @include hyphens-none;
  @include hanging-none;
}

p.indent {
  font-size: $font-size-current * 0.95;
  margin-left: $font-size-current * 2;
  margin-bottom: $paragraph-margin-bottom * 1.75;
}

:not([class='indent']) + p.indent { margin-top: -$paragraph-margin-bottom }

p.indent + p.indent { margin-top: -$paragraph-margin-bottom }

p.superquote {
  line-height: 1.4;
  font-style: italic;
  font-size: $font-size-current * 2;
  margin-left: $font-size-current;
  margin-bottom: $paragraph-margin-bottom * 1.25;
}

p.reference { font-size: $font-size-current * 0.9 }


// Hanging punctuation

@each $viewport, $width in $viewport-widths {
  $infix: get-breakpoint-infix($viewport);

  @include media-breakpoint-up($width) {
    .hanging-laquo#{$infix} { margin-left: -$font-size-current / 2 }
    .hanging-laquo-whitespace#{$infix} { margin-right: $font-size-current / 2 }
    .hanging-lpar#{$infix} { margin-left: -$font-size-current / 3 }
    .hanging-lpar-whitespace#{$infix} { margin-right: $font-size-current / 3 }
    .hanging-horbar#{$infix} { margin-left: -$font-size-current * 1.3 }
  }
}


// Code highlight

.highlight pre {
  background: $gray-100;
  font-size: 0.9 * $font-size-current;
  padding-top: $font-size-current * 0.75;
  padding-bottom: $font-size-current;
  margin-bottom: $font-size-current * 2;

  .lineno {
    padding-left: $font-size-current * 0.5;
    padding-right: $font-size-current * 0.5;
    color: $gray-300;
    @include select-none;
  }
}

